added param regarding changes and test for expected exception